# scrap

./: .editorconfig  .gitignore  CMakeLists.txt
src/: CMakeLists.txt  application.cpp  application.h  command.cpp  command.h  config.cpp  config.h  environment.cpp  environment.h  main.cpp  operation.cpp  operation.h  path.cpp  path.h
src/toolchain/: list.cpp  list.h  toolchain.cpp  toolchain.h
